# ksantest

./: .gitignore  .gitmodules  LICENSE2  README.md
python/: .gitignore  README.md  bootstrap  pyproject.toml  requirements.txt  run_test.sh  sample.conf  setup.ps1  setup.py  setup.sh  start-function.bat  start-function.ps1  start-function.sh  start.bat  start.ps1  start.sh
python/s3tests/: __init__.py  config.py  test_base.py
python/s3tests/auth/: __init__.py  aws2_signer.py  aws4_signer_auth_header.py  aws4_signer_base.py  aws4_signer_chunked.py
python/s3tests/data/: aes256.py  backend_headers.py  form_file.py  http_result.py  main_data.py  multipart_upload_data.py  user_data.py
python/s3tests/ksan/: __init__.py  client.py
python/s3tests/tests/: conftest.py  test_accelerate.py  test_access.py  test_acl.py  test_analytics.py  test_backend.py  test_copy_object.py  test_cors.py  test_cse.py  test_delete_bucket.py  test_delete_objects.py  test_get_object.py  test_get_object_attributes.py  test_grants.py  test_inventory.py  test_kms.py  test_ksan_api.py  test_lifecycle.py  test_list_buckets.py  test_list_objects.py  test_list_objects_v2.py  test_list_objects_versions.py  test_lock.py  test_logging.py  test_metrics.py  test_multipart.py  test_notification.py  test_ownership.py  test_payment.py  test_policy.py  test_post.py  test_put_bucket.py  test_put_object.py  test_replication.py  test_select_object_content.py  test_sse_c.py  test_sse_s3.py  test_taggings.py  (+2 more)
python/s3tests_boto3/: __init__.py  common.py
python/scripts/: resolve_test_target.py  run_report.py
(+599 files in other folders)
